--- a/_src/pug/modules/_form.pug
+++ b/_src/pug/modules/_form.pug
@@ -17,7 +17,7 @@ section.record
         .record-form__box.personal-box
           input.personal-box__input(type="checkbox" checked name=`record-form-personal-${record}` id= `record-form-personal-${record}`)
 
-          label.personal-box__label(for=`record-form-personal-${record}`) Отправляя данные, вы соглашаетесь с&nbsp;Политикой конфиденциальности
+          label.personal-box__label(for=`record-form-personal-${record}`) Отправляя заявку, я&nbsp;даю согласие на&nbsp;обработку персональных данных
 
 
 
