--- a/_src/pug/modules/_footer.pug
+++ b/_src/pug/modules/_footer.pug
@@ -7,13 +7,13 @@ footer.main-footer
     .main-footer__bottom
       .footer__nav-wrap
         nav.footer__nav.footer-nav--left
-          a.footer-nav__link(href="") О компании
-          a.footer-nav__link(href="") Каталог мебели
-          a.footer-nav__link(href="") Бренды
+          a.footer-nav__link(href="https://mirmebely.ru/about/" target="_blank") О компании
+          a.footer-nav__link(href="https://mirmebely.ru/catalog/" target="_blank") Каталог мебели
+          a.footer-nav__link(href="https://mirmebely.ru/brand/" target="_blank") Бренды
         nav.footer__nav.footer-nav--right
-          a.footer-nav__link(href="") Распродажа
-          a.footer-nav__link(href="") Акции
-          a.footer-nav__link(href="#contacts") Контакты
+          a.footer-nav__link(href="https://mirmebely.ru/sale/" target="_blank") Распродажа
+          a.footer-nav__link(href="https://mirmebely.ru/promo/" target="_blank") Акции
+          a.footer-nav__link(href="https://mirmebely.ru/contact/" target="_blank") Контакты
 
       .footer__copy.copy
         p ©
