--- a/_src/pug/modules/_form.pug
+++ b/_src/pug/modules/_form.pug
@@ -1,4 +1,4 @@
-section.record
+section.record(id=`record-${record}`)
   h2.record__title Записаться на консультацию
   .record__inner
     figure.record__img-wrap
