--- a/_src/sass/blocks/8-decor.scss
+++ b/_src/sass/blocks/8-decor.scss
@@ -111,6 +111,8 @@
     @include mw($ldt) {
       top: 14%;
       width: 43%;
+      background-size: 100% 100%;
+      background-image: url(/img/frame-1440.png);
     }
 
     @include mw($dt) {
