--- a/_src/sass/blocks/footer.scss
+++ b/_src/sass/blocks/footer.scss
@@ -84,6 +84,7 @@
   &__copy {
     & p {
       font-size: 18px;
+      font-weight: 300;
       line-height: 22px;
       text-align: right;
       letter-spacing: 0.02em;
