--- a/_src/pug/modules/_footer.pug
+++ b/_src/pug/modules/_footer.pug
@@ -26,7 +26,7 @@ footer.main-footer
           a.copy__link(href="#")  Jet Marketing
 
     .footer__up.up
-      a.up__link(href="#" area-label="В начало")
+      a.up__link(href="#" aria-label="В начало")
 
 
 
